@@ -1,0 +1,220 @@
+#include <gdk-pixbuf/gdk-pixdata.h>
+
+/* The gnuplot point-types, generated as per gnuplot's
+   cairo terminal
+*/
+
+static const GdkPixdata pt_00 = {
+  0x47646b50, /* Pixbuf magic: 'GdkP' */
+  24 + 85, /* header length + pixel_data length */
+  0x2010002, /* pixdata_type */
+  64, /* rowstride */
+  16, /* width */
+  16, /* height */
+  /* pixel_data: */ (guint8 *)
+  "\330\0\0\0\0\1\0\0\0w\217\0\0\0\0\1\0\0\0\377\217\0\0\0\0\1\0\0\0\377"
+  "\214\0\0\0\0\1\0\0\0x\205\0\0\0\377\1\0\0\0\207\214\0\0\0\0\1\0\0\0\377"
+  "\217\0\0\0\0\1\0\0\0\377\217\0\0\0\0\1\0\0\0\210\307\0\0\0\0",
+};
+
+static const GdkPixdata pt_01 = {
+  0x47646b50, /* Pixbuf magic: 'GdkP' */
+  24 + 199, /* header length + pixel_data length */
+  0x2010002, /* pixdata_type */
+  64, /* rowstride */
+  16, /* width */
+  16, /* height */
+  /* pixel_data: */ (guint8 *)
+  "\325\0\0\0\0\2\0\0\0u\0\0\0@\203\0\0\0\0\2\0\0\0@\0\0\0u\211\0\0\0\0"
+  "\7\0\0\0@\0\0\0\353\0\0\0@\0\0\0\0\0\0\0@\0\0\0\353\0\0\0@\212\0\0\0"
+  "\0\5\0\0\0@\0\0\0\353\0\0\0p\0\0\0\353\0\0\0@\214\0\0\0\0\3\0\0\0p\0"
+  "\0\0\377\0\0\0p\214\0\0\0\0\5\0\0\0@\0\0\0\353\0\0\0p\0\0\0\353\0\0\0"
+  "@\212\0\0\0\0\7\0\0\0@\0\0\0\353\0\0\0@\0\0\0\0\0\0\0@\0\0\0\353\0\0"
+  "\0@\211\0\0\0\0\2\0\0\0v\0\0\0@\203\0\0\0\0\2\0\0\0@\0\0\0v\304\0\0\0"
+  "\0",
+};
+
+static const GdkPixdata pt_02 = {
+  0x47646b50, /* Pixbuf magic: 'GdkP' */
+  24 + 213, /* header length + pixel_data length */
+  0x2010002, /* pixdata_type */
+  64, /* rowstride */
+  16, /* width */
+  16, /* height */
+  /* pixel_data: */ (guint8 *)
+  "\325\0\0\0\0\7\0\0\0u\0\0\0@\0\0\0\0\0\0\0w\0\0\0\0\0\0\0@\0\0\0u\211"
+  "\0\0\0\0\7\0\0\0@\0\0\0\353\0\0\0@\0\0\0\377\0\0\0@\0\0\0\353\0\0\0@"
+  "\212\0\0\0\0\5\0\0\0@\0\0\0\353\0\0\0\377\0\0\0\353\0\0\0@\212\0\0\0"
+  "\0\1\0\0\0x\205\0\0\0\377\1\0\0\0\207\212\0\0\0\0\5\0\0\0@\0\0\0\353"
+  "\0\0\0\377\0\0\0\353\0\0\0@\212\0\0\0\0\7\0\0\0@\0\0\0\353\0\0\0@\0\0"
+  "\0\377\0\0\0@\0\0\0\353\0\0\0@\211\0\0\0\0\7\0\0\0v\0\0\0@\0\0\0\0\0"
+  "\0\0\210\0\0\0\0\0\0\0@\0\0\0v\304\0\0\0\0",
+};
+
+static const GdkPixdata pt_03 = {
+  0x47646b50, /* Pixbuf magic: 'GdkP' */
+  24 + 135, /* header length + pixel_data length */
+  0x2010002, /* pixdata_type */
+  64, /* rowstride */
+  16, /* width */
+  16, /* height */
+  /* pixel_data: */ (guint8 *)
+  "\325\0\0\0\0\207\0\0\0\377\211\0\0\0\0\1\0\0\0\377\205\0\0\0\0\1\0\0"
+  "\0\377\211\0\0\0\0\1\0\0\0\377\205\0\0\0\0\1\0\0\0\377\211\0\0\0\0\1"
+  "\0\0\0\377\202\0\0\0\0\1\0\0\0\275\202\0\0\0\0\1\0\0\0\377\211\0\0\0"
+  "\0\1\0\0\0\377\205\0\0\0\0\1\0\0\0\377\211\0\0\0\0\1\0\0\0\377\205\0"
+  "\0\0\0\1\0\0\0\377\211\0\0\0\0\207\0\0\0\377\304\0\0\0\0",
+};
+
+static const GdkPixdata pt_04 = {
+  0x47646b50, /* Pixbuf magic: 'GdkP' */
+  24 + 75, /* header length + pixel_data length */
+  0x2010002, /* pixdata_type */
+  64, /* rowstride */
+  16, /* width */
+  16, /* height */
+  /* pixel_data: */ (guint8 *)
+  "\325\0\0\0\0\207\0\0\0\377\211\0\0\0\0\207\0\0\0\377\211\0\0\0\0\207"
+  "\0\0\0\377\211\0\0\0\0\207\0\0\0\377\211\0\0\0\0\207\0\0\0\377\211\0"
+  "\0\0\0\207\0\0\0\377\211\0\0\0\0\207\0\0\0\377\304\0\0\0\0",
+};
+
+static const GdkPixdata pt_05 = {
+  0x47646b50, /* Pixbuf magic: 'GdkP' */
+  24 + 215, /* header length + pixel_data length */
+  0x2010002, /* pixdata_type */
+  64, /* rowstride */
+  16, /* width */
+  16, /* height */
+  /* pixel_data: */ (guint8 *)
+  "\326\0\0\0\0\5\0\0\0[\0\0\0\314\0\0\0\354\0\0\0\314\0\0\0[\212\0\0\0"
+  "\0\7\0\0\0M\0\0\0\324\0\0\0<\0\0\0\6\0\0\0<\0\0\0\324\0\0\0M\211\0\0"
+  "\0\0\2\0\0\0\313\0\0\0""9\203\0\0\0\0\2\0\0\0""9\0\0\0\313\211\0\0\0"
+  "\0\7\0\0\0\363\0\0\0\14\0\0\0\0\0\0\0\275\0\0\0\0\0\0\0\14\0\0\0\363"
+  "\211\0\0\0\0\2\0\0\0\313\0\0\0""9\203\0\0\0\0\2\0\0\0""9\0\0\0\313\211"
+  "\0\0\0\0\7\0\0\0M\0\0\0\324\0\0\0<\0\0\0\6\0\0\0<\0\0\0\324\0\0\0M\212"
+  "\0\0\0\0\5\0\0\0[\0\0\0\314\0\0\0\354\0\0\0\314\0\0\0[\305\0\0\0\0",
+};
+
+static const GdkPixdata pt_06 = {
+  0x47646b50, /* Pixbuf magic: 'GdkP' */
+  24 + 173, /* header length + pixel_data length */
+  0x2010002, /* pixdata_type */
+  64, /* rowstride */
+  16, /* width */
+  16, /* height */
+  /* pixel_data: */ (guint8 *)
+  "\326\0\0\0\0\5\0\0\0\\\0\0\0\333\0\0\0\365\0\0\0\333\0\0\0\\\212\0\0"
+  "\0\0\2\0\0\0N\0\0\0\362\203\0\0\0\377\2\0\0\0\362\0\0\0N\211\0\0\0\0"
+  "\1\0\0\0\332\205\0\0\0\377\1\0\0\0\332\211\0\0\0\0\1\0\0\0\370\205\0"
+  "\0\0\377\1\0\0\0\370\211\0\0\0\0\1\0\0\0\332\205\0\0\0\377\1\0\0\0\332"
+  "\211\0\0\0\0\2\0\0\0N\0\0\0\362\203\0\0\0\377\2\0\0\0\362\0\0\0N\212"
+  "\0\0\0\0\5\0\0\0\\\0\0\0\333\0\0\0\365\0\0\0\333\0\0\0\\\305\0\0\0\0",
+};
+
+static const GdkPixdata pt_07 = {
+  0x47646b50, /* Pixbuf magic: 'GdkP' */
+  24 + 159, /* header length + pixel_data length */
+  0x2010002, /* pixdata_type */
+  64, /* rowstride */
+  16, /* width */
+  16, /* height */
+  /* pixel_data: */ (guint8 *)
+  "\310\0\0\0\0\1\0\0\0#\216\0\0\0\0\3\0\0\0\37\0\0\0\377\0\0\0\37\215\0"
+  "\0\0\0\3\0\0\0\257\0\0\0\370\0\0\0\257\214\0\0\0\0\5\0\0\0I\0\0\0\332"
+  "\0\0\0\16\0\0\0\332\0\0\0I\212\0\0\0\0\7\0\0\0\7\0\0\0\332\0\0\0I\0\0"
+  "\0\275\0\0\0I\0\0\0\332\0\0\0\7\211\0\0\0\0\2\0\0\0|\0\0\0\257\203\0"
+  "\0\0\0\2\0\0\0\257\0\0\0|\210\0\0\0\0\1\0\0\0\36\207\0\0\0\377\1\0\0"
+  "\0\36\323\0\0\0\0",
+};
+
+static const GdkPixdata pt_08 = {
+  0x47646b50, /* Pixbuf magic: 'GdkP' */
+  24 + 153, /* header length + pixel_data length */
+  0x2010002, /* pixdata_type */
+  64, /* rowstride */
+  16, /* width */
+  16, /* height */
+  /* pixel_data: */ (guint8 *)
+  "\310\0\0\0\0\1\0\0\0#\216\0\0\0\0\3\0\0\0\37\0\0\0\377\0\0\0\37\215\0"
+  "\0\0\0\3\0\0\0\271\0\0\0\377\0\0\0\271\214\0\0\0\0\5\0\0\0I\0\0\0\364"
+  "\0\0\0\377\0\0\0\364\0\0\0I\212\0\0\0\0\2\0\0\0\7\0\0\0\345\203\0\0\0"
+  "\377\2\0\0\0\345\0\0\0\7\211\0\0\0\0\2\0\0\0\200\0\0\0\365\203\0\0\0"
+  "\377\2\0\0\0\365\0\0\0\200\210\0\0\0\0\1\0\0\0\36\207\0\0\0\377\1\0\0"
+  "\0\36\323\0\0\0\0",
+};
+
+static const GdkPixdata pt_09 = {
+  0x47646b50, /* Pixbuf magic: 'GdkP' */
+  24 + 159, /* header length + pixel_data length */
+  0x2010002, /* pixdata_type */
+  64, /* rowstride */
+  16, /* width */
+  16, /* height */
+  /* pixel_data: */ (guint8 *)
+  "\344\0\0\0\0\1\0\0\0\36\207\0\0\0\377\1\0\0\0\36\210\0\0\0\0\2\0\0\0"
+  "|\0\0\0\257\203\0\0\0\0\2\0\0\0\257\0\0\0|\211\0\0\0\0\7\0\0\0\7\0\0"
+  "\0\332\0\0\0I\0\0\0\275\0\0\0I\0\0\0\332\0\0\0\7\212\0\0\0\0\5\0\0\0"
+  "I\0\0\0\332\0\0\0\16\0\0\0\332\0\0\0I\214\0\0\0\0\3\0\0\0\257\0\0\0\370"
+  "\0\0\0\257\215\0\0\0\0\3\0\0\0\37\0\0\0\377\0\0\0\37\216\0\0\0\0\1\0"
+  "\0\0#\267\0\0\0\0",
+};
+
+static const GdkPixdata pt_10 = {
+  0x47646b50, /* Pixbuf magic: 'GdkP' */
+  24 + 153, /* header length + pixel_data length */
+  0x2010002, /* pixdata_type */
+  64, /* rowstride */
+  16, /* width */
+  16, /* height */
+  /* pixel_data: */ (guint8 *)
+  "\344\0\0\0\0\1\0\0\0\36\207\0\0\0\377\1\0\0\0\36\210\0\0\0\0\2\0\0\0"
+  "\200\0\0\0\365\203\0\0\0\377\2\0\0\0\365\0\0\0\200\211\0\0\0\0\2\0\0"
+  "\0\7\0\0\0\345\203\0\0\0\377\2\0\0\0\345\0\0\0\7\212\0\0\0\0\5\0\0\0"
+  "I\0\0\0\364\0\0\0\377\0\0\0\364\0\0\0I\214\0\0\0\0\3\0\0\0\271\0\0\0"
+  "\377\0\0\0\271\215\0\0\0\0\3\0\0\0\37\0\0\0\377\0\0\0\37\216\0\0\0\0"
+  "\1\0\0\0#\267\0\0\0\0",
+};
+
+static const GdkPixdata pt_11 = {
+  0x47646b50, /* Pixbuf magic: 'GdkP' */
+  24 + 223, /* header length + pixel_data length */
+  0x2010002, /* pixdata_type */
+  64, /* rowstride */
+  16, /* width */
+  16, /* height */
+  /* pixel_data: */ (guint8 *)
+  "\310\0\0\0\0\1\0\0\0\13\216\0\0\0\0\3\0\0\0@\0\0\0\377\0\0\0@\214\0\0"
+  "\0\0\5\0\0\0@\0\0\0\353\0\0\0\200\0\0\0\353\0\0\0@\212\0\0\0\0\7\0\0"
+  "\0@\0\0\0\353\0\0\0@\0\0\0\0\0\0\0@\0\0\0\353\0\0\0@\210\0\0\0\0\11\0"
+  "\0\0\12\0\0\0\377\0\0\0\200\0\0\0\0\0\0\0\275\0\0\0\0\0\0\0\200\0\0\0"
+  "\377\0\0\0\12\210\0\0\0\0\7\0\0\0@\0\0\0\353\0\0\0@\0\0\0\0\0\0\0@\0"
+  "\0\0\353\0\0\0@\212\0\0\0\0\5\0\0\0@\0\0\0\353\0\0\0\200\0\0\0\353\0"
+  "\0\0@\214\0\0\0\0\3\0\0\0@\0\0\0\377\0\0\0@\216\0\0\0\0\1\0\0\0\13\267"
+  "\0\0\0\0",
+};
+
+static const GdkPixdata pt_12 = {
+  0x47646b50, /* Pixbuf magic: 'GdkP' */
+  24 + 189, /* header length + pixel_data length */
+  0x2010002, /* pixdata_type */
+  64, /* rowstride */
+  16, /* width */
+  16, /* height */
+  /* pixel_data: */ (guint8 *)
+  "\310\0\0\0\0\1\0\0\0\13\216\0\0\0\0\3\0\0\0@\0\0\0\377\0\0\0@\214\0\0"
+  "\0\0\5\0\0\0@\0\0\0\365\0\0\0\377\0\0\0\365\0\0\0@\212\0\0\0\0\2\0\0"
+  "\0@\0\0\0\365\203\0\0\0\377\2\0\0\0\365\0\0\0@\210\0\0\0\0\1\0\0\0\12"
+  "\207\0\0\0\377\1\0\0\0\12\210\0\0\0\0\2\0\0\0@\0\0\0\365\203\0\0\0\377"
+  "\2\0\0\0\365\0\0\0@\212\0\0\0\0\5\0\0\0@\0\0\0\365\0\0\0\377\0\0\0\365"
+  "\0\0\0@\214\0\0\0\0\3\0\0\0@\0\0\0\377\0\0\0@\216\0\0\0\0\1\0\0\0\13"
+  "\267\0\0\0\0",
+};
+
+static const GdkPixdata *gppoints[] = {
+    &pt_00, &pt_01, &pt_02, &pt_03, &pt_04, &pt_05,
+    &pt_06, &pt_07, &pt_08, &pt_09, &pt_10, &pt_11, &pt_12
+};
+
+
+
